@@ -1,141 +1,139 @@
 package com.banking_rest_api.test_demo_bank.controller;
 
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.Mockito.*;
-import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
-import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
-
+import com.banking_rest_api.test_demo_bank.mapper.RequestToTransactionMapper;
 import com.banking_rest_api.test_demo_bank.model.Account;
+import com.banking_rest_api.test_demo_bank.model.AccountDTO;
 import com.banking_rest_api.test_demo_bank.model.Transaction;
+import com.banking_rest_api.test_demo_bank.payload.incoming.ClientRequest;
+import com.banking_rest_api.test_demo_bank.payload.incoming.ClientTransferRequest;
+import com.banking_rest_api.test_demo_bank.payload.outgoing.AccountCreatedResponse;
+import com.banking_rest_api.test_demo_bank.payload.outgoing.TransactionResponse;
 import com.banking_rest_api.test_demo_bank.service.AccountManagementService;
-import com.banking_rest_api.test_demo_bank.service.AccountTransactionsService;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.MockitoAnnotations;
-import org.springframework.test.web.servlet.MockMvc;
-import org.springframework.test.web.servlet.setup.MockMvcBuilders;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.ResponseEntity;
 
 import java.math.BigDecimal;
-import java.math.BigInteger;
-import java.util.Arrays;
 import java.util.List;
+import java.util.UUID;
 
-class AccountControllerTest {
+import static org.junit.jupiter.api.Assertions.*;
+import static org.mockito.Mockito.*;
+
+public class AccountControllerTest {
+
+    @Mock
+    private AccountManagementService accountManagementService;
+
+    @Mock
+    private RequestToTransactionMapper mapper;
 
     @InjectMocks
     private AccountController accountController;
 
-    @Mock
-    private AccountManagementService managementService;
-
-    @Mock
-    private AccountTransactionsService transactionsService;
-
-    private MockMvc mockMvc;
-
     @BeforeEach
     public void setUp() {
-        MockitoAnnotations.openMocks(this);
-        mockMvc = MockMvcBuilders.standaloneSetup(accountController).build();
+        MockitoAnnotations.initMocks(this);
     }
 
     @Test
-    public void testCreateNewAccount() throws Exception {
-
-        var account = Account.builder()
-                .first_name("Sarah")
-                .last_name("Doe")
-                .balance(BigInteger.valueOf(500))
+    public void testCreateNewAccount() {
+        Account account = new Account();
+        AccountCreatedResponse expectedResponse = AccountCreatedResponse.builder()
+                .wasSuccessful(true)
+                .description("Account created")
                 .build();
 
+        when(accountManagementService.saveAccount(account)).thenReturn(expectedResponse);
 
-        mockMvc.perform(post("/api/v1/createUser")
-                        .contentType("application/json")
-                        .content("{\"first_name\":\"Sarah\", \"last_name\":\"Doe\"}"))
-                .andExpect(status().isOk())
-                .andExpect(jsonPath("$.wasSuccessful").value(true))
-                .andExpect(jsonPath("$.description").value("Account created"));
+        ResponseEntity<AccountCreatedResponse> response = accountController.createNewAccount(account);
 
-        verify(managementService, times(1)).saveAccount(any(Account.class));
+        assertEquals(HttpStatus.OK, response.getStatusCode());
+        assertEquals(expectedResponse, response.getBody());
+        verify(accountManagementService, times(1)).saveAccount(account);
     }
 
     @Test
-    public void testGetAccById() throws Exception {
-
+    public void testGetAccById() {
         Long accountId = 1L;
-        var account = Account.builder()
-                .id(1L)
-                .first_name("Sarah")
-                .last_name("Doe")
-                .balance(BigDecimal.valueOf(500.0))
-                .build();
+        AccountDTO accountDTO = new AccountDTO(accountId, "John", "Dddd", null, BigDecimal.valueOf(1000), List.of());
 
-        when(managementService.getById(accountId)).thenReturn(account);
-        when(transactionsService.allTransactionsForAccountID(accountId)).thenReturn(Arrays.asList());
+        when(accountManagementService.getById(accountId)).thenReturn(accountDTO);
 
-        mockMvc.perform(get("/api/v1/getById/{id}", accountId))
-                .andExpect(status().isOk());
+        ResponseEntity<AccountDTO> response = accountController.getAccById(accountId);
 
-        verify(managementService, times(1)).getById(accountId);
+        assertEquals(HttpStatus.OK, response.getStatusCode());
+        assertEquals(accountDTO, response.getBody());
+        verify(accountManagementService, times(1)).getById(accountId);
     }
 
     @Test
-    public void testGetAllAccounts() throws Exception {
-        List<Account> accounts = Arrays.asList(new Account(), new Account());
+    public void testGetAllAccounts() {
+        List<Account> accounts = List.of(new Account(), new Account());
 
-        when(managementService.getAllUsers()).thenReturn(accounts);
+        when(accountManagementService.getAllUsers()).thenReturn(accounts);
 
-        mockMvc.perform(get("/api/v1/getAll"))
-                .andExpect(status().isOk())
-                .andExpect(jsonPath("$").isArray())
-                .andExpect(jsonPath("$.length()").value(2));
+        ResponseEntity<List<Account>> response = accountController.getAllAccounts();
 
-        verify(managementService, times(1)).getAllUsers();
+        assertEquals(HttpStatus.OK, response.getStatusCode());
+        assertEquals(accounts.size(), response.getBody().size());
+        verify(accountManagementService, times(1)).getAllUsers();
     }
 
     @Test
-    public void testDeposit() throws Exception {
-        DepositRequest request = new DepositRequest();
-        request.setAccountId(1L);
-        request.setSum(BigDecimal.valueOf(100));
+    public void testDeposit() {
+        ClientRequest clientRequest = new ClientRequest(1L, BigDecimal.valueOf(1000));
+        Transaction transaction = Transaction.builder().orderID(UUID.randomUUID().toString()).sum(clientRequest.getSum()).build();
+        TransactionResponse transactionResponse = TransactionResponse.builder().wasSuccessful(true).transactionID(transaction.getOrderID()).build();
 
-        mockMvc.perform(post("/api/v1/deposit")
-                        .contentType("application/json")
-                        .content("{\"accountId\":1, \"sum\":100.0}"))
-                .andExpect(status().isOk());
+        when(mapper.depositTransaction(clientRequest)).thenReturn(transaction);
+        when(accountManagementService.deposit(transaction)).thenReturn(transactionResponse);
 
-        verify(transactionsService, times(1)).deposit(any(Transaction.class));
+        ResponseEntity<TransactionResponse> response = accountController.deposit(clientRequest);
+
+        assertEquals(HttpStatus.OK, response.getStatusCode());
+        assertEquals(transactionResponse, response.getBody());
+        verify(mapper, times(1)).depositTransaction(clientRequest);
+        verify(accountManagementService, times(1)).deposit(transaction);
     }
 
     @Test
-    public void testWithdraw() throws Exception {
-        WithdrawRequest request = new WithdrawRequest();
-        request.setAccountId(1L);
-        request.setSum(BigDecimal.valueOf(50));
+    public void testWithdraw() {
+        ClientRequest clientRequest = new ClientRequest(1L, BigDecimal.valueOf(500));
+        Transaction transaction = Transaction.builder().orderID(UUID.randomUUID().toString()).sum(clientRequest.getSum()).build();
+        TransactionResponse transactionResponse = TransactionResponse.builder().wasSuccessful(true).transactionID(transaction.getOrderID()).build();
 
-        mockMvc.perform(post("/api/v1/withdraw")
-                        .contentType("application/json")
-                        .content("{\"accountId\":1, \"sum\":50.0}"))
-                .andExpect(status().isOk());
+        when(mapper.withdrawTransaction(clientRequest)).thenReturn(transaction);
+        when(accountManagementService.withdraw(transaction)).thenReturn(transactionResponse);
 
-        verify(transactionsService, times(1)).withdraw(any(Transaction.class));
+        ResponseEntity<TransactionResponse> response = accountController.withdraw(clientRequest);
+
+        assertEquals(HttpStatus.OK, response.getStatusCode());
+        assertEquals(transactionResponse, response.getBody());
+        verify(mapper, times(1)).withdrawTransaction(clientRequest);
+        verify(accountManagementService, times(1)).withdraw(transaction);
     }
 
     @Test
-    public void testTransfer() throws Exception {
-        TransferRequest request = new TransferRequest();
-        request.setSenderAccountID(1L);
-        request.setReceiverAccountID(2L);
-        request.setSum(BigDecimal.valueOf(75));
+    public void testTransfer() {
+        ClientTransferRequest transferRequest = new ClientTransferRequest(1L, 2L, BigDecimal.valueOf(100));
+        Transaction outgoingTransaction = Transaction.builder().orderID(UUID.randomUUID().toString()).sum(transferRequest.getSum()).build();
+        Transaction incomingTransaction = Transaction.builder().orderID(UUID.randomUUID().toString()).sum(transferRequest.getSum()).build();
+        List<Transaction> transactions = List.of(outgoingTransaction, incomingTransaction);
+        TransactionResponse transactionResponse = TransactionResponse.builder().wasSuccessful(true).transactionID(outgoingTransaction.getOrderID()).build();
 
-        mockMvc.perform(post("/api/v1/transfer")
-                        .contentType("application/json")
-                        .content("{\"senderAccountID\":1, \"receiverAccountID\":2, \"sum\":75.0}"))
-                .andExpect(status().isOk());
+        when(mapper.transferTransactions(transferRequest)).thenReturn(transactions);
+        when(accountManagementService.transfer(transactions)).thenReturn(transactionResponse);
 
-        verify(transactionsService, times(1)).withdraw(any(Transaction.class));
-        verify(transactionsService, times(1)).deposit(any(Transaction.class));
+        ResponseEntity<TransactionResponse> response = accountController.transfer(transferRequest);
+
+        assertEquals(HttpStatus.OK, response.getStatusCode());
+        assertEquals(transactionResponse, response.getBody());
+        verify(mapper, times(1)).transferTransactions(transferRequest);
+        verify(accountManagementService, times(1)).transfer(transactions);
     }
 }
